// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 136746,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 136904,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 271524,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 299370,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 307697,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 282543,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 218073,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 218204,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 234961,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 216938,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 365323,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 217023,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 344189,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 306096,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 284815,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 186480,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 194897,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 224665,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 193960,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 224720,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 193914,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 373105,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 259230,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 358351,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 250188,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 288425,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 263336,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 288990,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 366143,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 387124,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 334350,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 382691,
}
`;
